Discussions: Fix misaligned issue close icon

--- a/github-dark.css
+++ b/github-dark.css
@@ -435,11 +435,16 @@
   .js-menu-target:hover .dropdown-arrow {
     border-top-color: /*[[base-color]]*/ #4183C4 !important;
   }
-  /* GitHub Bug: Center tab counters vertically on the line  */
+  /* GitHub Bug: Center tab counters vertically on the line */
   #conversation_tab_counter, #commits_tab_counter, #files_tab_counter,
   .reponav-item .counter {
     vertical-align: middle !important;
     border-radius: 2px !important;
+  }
+  /* GitHub Bug: Center discussion close icon vertically */
+  .discussion-item-closed .octicon {
+    position: relative !important;
+    top: -1px;
   }
   /* GitHub Bug: Center emoji vertically on the line */
   .emoji, .boxed-group .counter, .reponav-item .counter {
